--- a/src/app/views/agent/contact-detail/contact-detail.component.html
+++ b/src/app/views/agent/contact-detail/contact-detail.component.html
@@ -36,12 +36,13 @@
         <div class="agent-contact">
           <h4>Address</h4> <span class="ag-add">{{getAddress()}}</span>
           <div class="clearfix"></div>
+          <div class="state">City <br><span>{{entityContactModel.city}}</span></div>
           <div class="state">State<br> <span>{{entityContactModel.state}}</span></div>
           <div class="state">Pin Code<br><span>{{entityContactModel.zip}}</span></div>
         </div>
       </div>
 
-      <div class="col-xs-12 col-md-6 cell-bg">
+      <div class="col-xs-12 col-md-6 cell-bg" *ngIf = "entityContactModel.entity === 'P'">
         <div class="agent-contact">
           <h4>Contact Number 1</h4> <span>{{entityContactModel.phone1}}</span>
           <div class="clearfix"></div>
@@ -55,9 +56,9 @@
         </div>
       </div>
       <div class="clearfix"></div>
-      <div class="col-xs-12 col-md-6 cell-bg">
+      <div class="col-xs-12 col-md-6 cell-bg" *ngIf = "entityContactModel.entity === 'A'">
         <div class="agent-contact">
-          <h4>Contact Number 1</h4> <span>{{entityContactModel.phone2}}</span>
+          <h4>Contact Number 2</h4> <span>{{entityContactModel.phone2}}</span>
           <div class="clearfix"></div>
           <div class="ag-detail">
             <ul>
