UI issues fix and Notes functionality implementation

--- a/src/app/customUI/dialogs/edit-objective/edit-objective.component.html
+++ b/src/app/customUI/dialogs/edit-objective/edit-objective.component.html
@@ -14,8 +14,17 @@
         <input type="text" class="form-control" id="name" [(ngModel)]="objectiveModel.description"
           [ngModelOptions]="{standalone: true}">
       </div>
-
-
+      <div class="form-group calenderPosition">
+        <label for="usr">Due Date of Objective</label>
+        <input type="text" class="form-control pr-38" placeholder="02-21-2019">
+        <button type="submit" class="btn btn-default add-btn"><img src="images/calendar-icon.svg" alt=""></button>
+        </div>
+        <!-- <mat-form-field appearance="fill">
+          <mat-label>Custom calendar header</mat-label>
+          <input matInput [matDatepicker]="picker">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker ></mat-datepicker>
+        </mat-form-field> -->
 
       <div class="clear paddingTop10"></div>
     </div>
