--- a/src/app/customUI/dialogs/add-note/add-note.component.html
+++ b/src/app/customUI/dialogs/add-note/add-note.component.html
@@ -9,12 +9,34 @@
       </div>
       <form role="form">
         <div class="modal-body">
-
-          <div class="clear paddingTop15"></div>
-
+          <div class="clear paddingTop15">
+          </div>
+          <span>
+            <label for="cars">Category:</label>
+            <div class="clear paddingTop15">
+            </div>
+            <ng-select [items]="category" bindLabel="value" name="category" bindValue="id" [(ngModel)]="notesCategory" [multiple]="false"
+              [virtualScroll]="true" placeholder="Select the Category" required>
+            </ng-select>
+          </span>
+          <div class="clear paddingTop15">
+          </div>
+          <span>
+            <label for="cars">Summary:</label>
+            <div class="clear paddingTop15">
+            </div>
+            <input type="text" class="form-control" placeholder="Write the Summary" [(ngModel)]="summary"
+              [ngModelOptions]="{standalone: true}" required>
+          </span>
+          <div class="clear paddingTop15">
+          </div>
+          <label for="cars">Notes:</label>
+          <div class="clear paddingTop15">
+          </div>
           <div class="form-group">
-            <input type="text" class="form-control" id="name" placeholder="Write your note here..." [(ngModel)]="note"
-              [ngModelOptions]="{standalone: true}">
+            <textarea type="text" class="form-control" id="name" placeholder="Write your note here..."
+              [(ngModel)]="note" [ngModelOptions]="{standalone: true}" rows="6" cols="50" style="resize:none;"
+              required></textarea>
           </div>
           <div class="clear paddingTop15"></div>
 
