--- a/src/app/views/agent/agent-objective/agent-objective.component.html
+++ b/src/app/views/agent/agent-objective/agent-objective.component.html
@@ -6,9 +6,12 @@
         <div class="col-xs-7 text-center">
           <h1 class="t-agent">Objective</h1>
         </div>
-        <div class="col-xs-3 text-center tpad" *ngIf="!hideEditObjective">
-          <a alt="" (click)="openEditObjectiveDialog()"><img src="../../../../images/add.svg" alt=""><br>
-            <span class="edit-detail">Edit Objective</span></a>
+        <!-- <div class="col-xs-3 text-center tpad" *ngIf="!hideEditObjective"> -->
+          <div class="col-xs-3 text-center tpad">
+          <!-- <a alt="" (click)="openEditObjectiveDialog()"><img src="../../../../images/add.svg" alt=""><br>
+            <span class="edit-detail">Edit Objective</span></a> -->
+            <a alt="" (click)="openEditObjectiveDialog()"><img src="../../../../images/add.svg" alt=""><br>
+              <span class="edit-detail">Add Objective</span></a>
         </div>
       </div>
     </div>
@@ -91,10 +94,15 @@
               <div class="row">
                 <div class="col-xs-12">
                   <div class="form-group">
-                    <button type="button" class="btn btn-primary addNoteBtn">
+                    <button type="button" class="btn btn-primary addNoteBtn" data-toggle="modal" data-target="#addNewNotes">
                       <img src="images/add-note-icon.svg" alt=""> &nbsp; Add Note
                     </button>
                   </div>
+                </div>
+                <div class="buttonFooter_wp">
+                  <button type="button" class="btn btn-primary footerBtn">
+                    <img src="images/record-obj-icon.svg" alt=""> Record Objective Sentiment
+                  </button>
                 </div>
               </div>
             </div>
@@ -119,9 +127,11 @@
                   </div>
                   <div class="ag-objective">
                     <ul>
-                      <li style="width:60%;" class="complete" (click)="onCompleteClick(ourActiveObjective)">Complete
+                      <li  class="complete" (click)="onCompleteClick(ourActiveObjective)">Complete
                       </li>
-                      <li style="width:40%;" class="cancel" (click)="onCancelClick(ourActiveObjective)">Cancel</li>
+                      <li  class="edit" (click)="openEditObjectiveDialog(ourActiveObjective)" >Edit
+                      </li>
+                      <li class="cancel" (click)="onCancelClick(ourActiveObjective)">Cancel</li>
                     </ul>
                   </div>
                 </div>
@@ -166,7 +176,7 @@
                 <div class="row">
                   <div class="col-xs-12">
                     <div class="form-group">
-                      <button type="button" class="btn btn-primary addNoteBtn">
+                      <button type="button" class="btn btn-primary addNoteBtn" data-toggle="modal" data-target="#addNewNotes">
                         <img src="images/add-note-icon.svg" alt=""> &nbsp; Add Note
                       </button>
                     </div>
@@ -195,3 +205,4 @@
     </div>
   </div>
 </div>
+<app-add-note></app-add-note>
