--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -14,27 +14,41 @@
     <div class="container app-bg">
       <div class="row">
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-          <div class="col-md-4 col-xs-10 box1">
-            <label for="Username">Username</label>
+          <div class="col-md-4 col-xs-12 box1">
             <div class="input-group">
-              <input type="text" class="form-control userIcon" readonly="readonly">
+              <label for="Username">Username</label>
+
+              <div class="input-group-prepend">
+                <input type="text" class="form-control userIcon" readonly="readonly">
+              </div>
+
               <input type="email" autocomplete="false" formControlName="email" class="form-control" id="username">
+              
             </div>
           </div>
 
-          <div class="col-md-4 col-xs-10 box1">
-            <label for="Password">Password</label>
+          <div class="col-md-4 col-xs-12 box1">
             <div class="input-group">
+              <label for="Password">Password</label>
+
+            <div class="input-group-prepend"> 
               <input type="password" class="form-control passwordIcon" readonly="readonly">
-              <input [type]="show ? 'text' : 'password'"  class="form-control" id="password" formControlName="password" name="password" (keyup)="showHidePasswordButton()">
-              
-              <div class="input-group-append" *ngIf = "showButton === true" style="display: flex;">
-                <button class=" form-control btn btn-outline-primary" type="button" (click) = "showHidePassword()" id="showpassword" tooltip={{tooltipText}} placement="top" hide-delay = "50">
-                  <i class="fa fa-eye-slash" aria-hidden="true" *ngIf = "show === true" style="color: gray;"></i>
-                  <i class="fa fa-eye" aria-hidden="true" *ngIf = "show === false" style="color: gray;"></i>
-                </button>
-              </div>
             </div>
+
+
+
+            <!-- <div class="input-group-prepend"  style="display: flex;"> -->
+            <div class="input-group-append" style="display: flex;">
+              <input [type]="show ? 'text' : 'password'" class="form-control" id="password" formControlName="password"
+              name="password" (keyup)="showHidePasswordButton()">
+              <button class=" form-control btn btn-outline-primary" type="button" (click)="showHidePassword()"
+                id="showpassword" tooltip={{tooltipText}} placement="top" hide-delay="50" [disabled] = !showButton>
+                <i class="fa fa-eye-slash" aria-hidden="true" *ngIf="show === true" style="color: gray;"></i>
+                <i class="fa fa-eye" aria-hidden="true" *ngIf="show === false" style="color: gray;"></i>
+              </button>
+            </div>
+            
+          </div>
           </div>
 
           <div class="col-md-4 col-xs-12 box1">
