--- a/src/app/customUI/dialogs/objective-sentiment/objective-sentiment.component.html
+++ b/src/app/customUI/dialogs/objective-sentiment/objective-sentiment.component.html
@@ -1,3 +1,91 @@
-<p>
-  objective-sentiment works!
-</p>
+<div class="modal fade" id="recordInteractionModal" role="dialog">
+  <div class="modal-dialog" style="margin-top:5%;">
+  
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Record Interaction</h4>
+      </div>
+      <form role="form">
+      <div class="modal-body">
+<div class="clear paddingTop10"></div>
+
+<div class="row">
+<div class="col-md-12 col-xs-12">
+<span>This is our Objective, What's your take on it.</span>
+</div>
+          
+<div class="col-md-12 col-xs-12">						
+<div class="collapse" id="collapseExample">
+More text...........?????????
+</div>
+<div class="clear paddingTop5"></div>
+<input type="button" class="showMoreBtn" data-toggle="collapse" href="#collapseExample" title="Show More" value="Show more" onclick="showLessBtn(this)" />
+</div>
+</div>
+<div class="clear paddingTop15"></div>
+
+<div class="divider"></div>
+
+<div class="clear paddingTop15"></div>
+<div class="clear paddingTop10"></div>
+
+<div class="row">
+<div class="col-md-4 col-xs-4">
+<div class="form-group">
+    <label class="paddingTop10" for="state">Sentiments of:</label>      
+  </div>
+</div>
+<div class="col-md-8 col-xs-8">
+<div class="form-group">     
+    <select class="form-control" id="sel1">
+      <option>Richard</option>        
+    </select>
+  </div>
+</div>
+</div>
+
+<div class="clear paddingTop15"></div>
+
+<div class="form-group">
+    <label for="usr">Sentiment Scale</label>
+<!--     <input type="text" class="form-control" id="name" placeholder="(Optional)"> -->
+  </div>
+
+
+
+<div class="clear paddingTop15"></div>
+<div class="clear paddingTop15"></div>
+<div class="clear paddingTop15"></div>
+<div class="clear paddingTop15"></div>
+
+<div class="form-group">
+    <p>Sentiment scale is remaining</p>
+</div>
+  
+<div class="clear paddingTop15"></div>
+<div class="clear paddingTop15"></div>
+<div class="clear paddingTop15"></div>    
+  
+
+  
+  
+<div class="form-group">
+    <label for="usr">Note</label>
+    <input type="text" class="form-control" id="name" placeholder="(Optional)">
+  </div>    
+  
+  
+  
+<div class="clear paddingTop10"></div>
+</div>
+      <div class="modal-footer">
+      <a href="#" data-dismiss="modal" alt="Cancel"><span>Cancel</span></a>
+      <a href="#" data-dismiss="modal" alt="OK, let me take action">Update</a>
+      </div>
+       </form>
+    </div>
+    
+  </div>
+</div>	  
