--- a/src/app/customUI/dialogs/add-objective-popup/add-objective-popup.component.css
+++ b/src/app/customUI/dialogs/add-objective-popup/add-objective-popup.component.css
@@ -1,3 +1,8 @@
-.mat-datepicker-toggle-default-icon {
-    width: 2em;
-}
+::ng-deep .mat-datepicker-content {
+    width: fit-content;
+   }
+  
+   ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-suffix .mat-datepicker-toggle-default-icon {
+      width: 2em !important;
+      color: orange;
+  }
