--- a/src/app/customUI/dialogs/objective-sentiment/objective-sentiment.component.css
+++ b/src/app/customUI/dialogs/objective-sentiment/objective-sentiment.component.css
@@ -74,7 +74,7 @@ transition: none;
 
 }
 
-@keyframes levitate {
+/* @keyframes levitate {
     0% {
         transform: translate(0, 0px)
     }
@@ -86,7 +86,7 @@ transition: none;
     100% {
         transform: translate(0, 0px)
     }
-}
+} */
 
 /* .example-block .image {
     transition: ease-in-out, transform 0.4s ease-in- out
@@ -119,33 +119,9 @@ input[type=radio]+label>img {
 {
     padding-left: 60px !important;
 }
-
-.tooltip {
-    position: relative;
-    display: inline-block;
-    border-bottom: 1px dotted black;
-  }
-  
-  .tooltip .tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: black;
-    color: #fff;
-    text-align: center;
-    border-radius: 6px;
-    padding: 5px 0;
-  
-    /* Position the tooltip */
-    position: absolute;
-    z-index: 1;
-  }
-  
-  .tooltip:hover .tooltiptext {
-    visibility: visible;
-  }
-/* @media (max-width: 400px) {
-    img {
-        width: auto;
-        height: auto
-    }
-} */
+.expressionText
+{
+    font-weight: bold;
+    padding-left: 60px !important;
+    padding-top: 10px !important;
+}
