--- a/src/app/views/agent/agent-notes/my-notes/my-notes.component.html
+++ b/src/app/views/agent/agent-notes/my-notes/my-notes.component.html
@@ -21,7 +21,7 @@
                 <div class="clearfix"></div>
                 <div class="state">Category <br><span>{{item.category}}</span></div>
                 <div class="state">Summary<br> <span>{{item.subject}}</span></div>
-                <div class="state">Note<br><span>{{item.notes}}</span></div>
+                <div class="state" style="width: 100% !important;">Note<br><span >{{item.notes}}</span></div>
               </div>
             </div>
 
