--- a/src/app/customUI/dialogs/add-objective-popup/add-objective-popup.component.html
+++ b/src/app/customUI/dialogs/add-objective-popup/add-objective-popup.component.html
@@ -20,7 +20,7 @@
         <br>
          <!-- <button type="submit" class="btn btn-default add-btn"><img src="images/calendar-icon.svg" alt=""></button> -->
         <mat-form-field >
-          <input matInput [matDatepicker] = "picker" type="number" placeholder = "Choose a date" name="dueDate" [(ngModel)]="dueDate"  readonly>
+          <input matInput [matDatepicker] = "picker" placeholder = "Choose a date" name="dueDate" [(ngModel)]="dueDate"  readonly>
           <mat-datepicker-toggle matSuffix [for] = "picker"></mat-datepicker-toggle>
           <mat-datepicker #picker ></mat-datepicker>
        </mat-form-field>
