fixes in objective sentiments ,edit objectives and agent objectives

--- a/src/app/customUI/dialogs/objective-sentiment/objective-sentiment.component.html
+++ b/src/app/customUI/dialogs/objective-sentiment/objective-sentiment.component.html
@@ -3,7 +3,7 @@
 
   <!-- Modal content-->
   <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal">&times;</button>
+    <button type="button" class="close" data-dismiss="modal" (click) = "onCancelClick()">&times;</button>
     <h4 class="modal-title">Record Interaction</h4>
   </div>
   <form role="form">
